[package]
name = "pybpe_openai"
version = "0.3.0"
edition = "2021"
authors = ["Michael Carleton"]
description = "Python bindings for Github's Fast tokenizers for OpenAI"

[lib]
name = "pybpe_openai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
bpe-openai = { path = "../rust-gems/crates/bpe-openai" }
bpe = { path = "../rust-gems/crates/bpe" }
